fix layout bugs fix bug where you couldn't set the illustration

--- a/public/stylesheets/sass/product.scss
+++ b/public/stylesheets/sass/product.scss
@@ -28,6 +28,9 @@
         .text_content {
             padding: 10px;
         }
+        #testimonials {
+            margin-top: 20px;
+        }
     }
     #illustration {
         width: 470px;
